# dino_game

./: CMakeLists.txt
include/: Constants.h  Dino.h  Game.h  Obstacle.h  ObstacleManager.h  ScoreManager.h
src/: Dino.cpp  Game.cpp  Obstacle.cpp  ObstacleManager.cpp  ScoreManager.cpp  main.cpp
